--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,14 @@ body {
     margin: 0px;
 }
 
-#nav {
+nav {
     background-color: #acd373;
     height: 75px;
     margin: 0px;
     padding: 0px;
 }
 
-#nav ul  {
+ul  {
     list-style-type: none;
     display: inline;
     font-family: "Open Sans", sans-serif;
@@ -22,7 +22,7 @@ body {
     font-size: .8em;
 }
 
-#nav img {
+nav img {
     padding: 15 px;
     display: inline;
     float: left;
@@ -33,16 +33,16 @@ body {
     max-height: 50px;
 }
 
-#nav ul li {
+nav ul li {
     display: inline;
     padding: 12px;
 }
 
-#nav .active {
+nav .active {
     text-decoration: underline;
 }
 
-#intro {
+.hero {
     height: 500px;
     background-color:  #9abd67;
     position: relative;
@@ -50,7 +50,7 @@ body {
 
 
 
-#intro h1 {
+.hero h1 {
     margin: 0px;
     font-family: "Open Sans", sans-serif;
     text-transform: uppercase;
@@ -60,7 +60,7 @@ body {
     font-size: 2.2em
 }
 
-#intro h2 {
+.hero h2 {
     color: #ffffff;
     font-family: "Droid Serif", serif;
     font-style: italic;
@@ -69,7 +69,7 @@ body {
     font-size: 1.2em;
 }
 
-#intro #arrow {
+.hero #arrow {
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -77,7 +77,7 @@ body {
 }
 
 
-#intro #siluet {
+.hero #siluet {
     height: auto;
     width: 100%;
     position: absolute;
@@ -87,12 +87,12 @@ body {
 
 }
 
-#who-we-are .wrapper {
+.about .wrapper {
     margin-top: 50px;
     display: inline-block;
 }
 
-#who-we-are h1 {
+.about h1 {
     font-family: "Open Sans", sans-serif;
     text-transform: uppercase;
     margin-left: 50px;
@@ -100,7 +100,7 @@ body {
     
 }
 
-#who-we-are p {
+.about p {
     font-family: "Open Sans", sans-serif;
     display: inline-block;
     margin: .5em;
@@ -108,7 +108,7 @@ body {
     
 }
 
-#who-we-are #text {
+#text {
     width: 55%;
     float: left;
     margin-left: 200px;
@@ -117,7 +117,7 @@ body {
     
 }
 
-#who-we-are #human {
+#human {
     height: auto;
     width: auto;
     max-height: 50px;
@@ -125,7 +125,7 @@ body {
     float: left;
 }
 
-#who-we-are button {
+.about button {
     font-family: "Droid Serif", serif;
     color: #9abd67;
     font-size: 1em;
@@ -138,7 +138,7 @@ body {
     margin-top: 30px;
 }
 
-#who-we-are #iphone {
+#iphone {
     display: inline-block;
     height: auto;
     width: auto;
