--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 body {
-    margin: 0px;
+    margin: 0em;
 }
 
 nav {
     background-color: #acd373;
-    height: 75px;
-    margin: 0px;
-    padding: 0px;
+    height: 4.75em;
+    margin: 0em;
+    padding: 0em;
 }
 
 ul  {
@@ -17,25 +17,25 @@ ul  {
     font-weight: bold;
     color: #ffffff;
     float: right;
-    margin-right: 200px;
-    margin-top: 25px;
+    margin-right: 15.5em;
+    margin-top: 2em;
     font-size: .8em;
 }
 
 nav img {
-    padding: 15 px;
+    padding: .5em;
     display: inline;
     float: left;
-    margin-left: 200px;
-    margin-top: 15px;
+    margin-left: 12.5em;
+    margin-top: 0.938em;
     height: auto;
     width: auto;
-    max-height: 50px;
+    max-height: 3.125em;
 }
 
 nav ul li {
     display: inline;
-    padding: 12px;
+    padding: .99em;
 }
 
 nav .active {
@@ -43,7 +43,7 @@ nav .active {
 }
 
 .hero {
-    height: 500px;
+    height: 31em;
     background-color:  #9abd67;
     position: relative;
 }
@@ -55,9 +55,9 @@ nav .active {
     font-family: "Open Sans", sans-serif;
     text-transform: uppercase;
     text-align: center;
-    padding-top: 100px;
+    padding-top: 2.9em;
     color: #ffffff;
-    font-size: 2.2em
+    font-size: 2.2em;
 }
 
 .hero h2 {
@@ -73,7 +73,7 @@ nav .active {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 50px
+    padding-top: 3em;
 }
 
 
@@ -81,21 +81,21 @@ nav .active {
     height: auto;
     width: 100%;
     position: absolute;
-    bottom: 0px;
-    left: 0px;
+    bottom: 0em;
+    left: 0em;
     
 
 }
 
 .about .wrapper {
-    margin-top: 50px;
+    margin-top: 3em;
     display: inline-block;
 }
 
 .about h1 {
     font-family: "Open Sans", sans-serif;
     text-transform: uppercase;
-    margin-left: 50px;
+    margin-left: 3em;
     font-weight: 300;
     
 }
@@ -111,8 +111,8 @@ nav .active {
 #text {
     width: 55%;
     float: left;
-    margin-left: 200px;
-    margin-top: 50px;
+    margin-left: 12.5em;
+    margin-top: 3em;
    
     
 }
@@ -120,7 +120,7 @@ nav .active {
 #human {
     height: auto;
     width: auto;
-    max-height: 50px;
+    max-height: 3em;
     display: inline;
     float: left;
 }
@@ -131,20 +131,20 @@ nav .active {
     font-size: 1em;
     border-color: #9abd67;
     border-style: solid;
-    border-width: 2px; 
-    height: 40px;
-    width: 150px;
+    border-width: .05em; 
+    height: 2.5em;
+    width: 9.3em;
     background-color: white;
-    margin-top: 30px;
+    margin-top: 2em;
 }
 
 #iphone {
     display: inline-block;
     height: auto;
     width: auto;
-    max-height: 400px;
+    max-height: 24em;
     float: right;
-    margin-right: 200px;
-    margin-bottom: 100px;
-    margin-top: 40px;
+    margin-right: 12em;
+    margin-bottom: 6em;
+    margin-top: 2.5em;
 }
