--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
 @media (max-width: 768px) {
     .navbar-header {
         float: none;
+        height: 6em;
     }
     .navbar-toggle {
         display: block;
@@ -39,12 +40,13 @@ body {
     }
     .collapsing {
         overflow: hidden!important;
-    }
+        
+    } 
 }
 
 .navbar.navbar-default {
     background-color: #acd373;
-    height: 4.75em;
+    height: 6em;
     margin: 0em;
     padding: 0em;
 }
@@ -53,11 +55,10 @@ body {
     height: auto;
     width: auto;
     max-height: 3.125em;
+    padding-left: 1em;
+    position: absolute;
 }
 
-#navbar {
-    background: #acd373;
-}
 
 ul  {
     list-style-type: none;
@@ -67,11 +68,25 @@ ul  {
     font-weight: bold;
     color: #ffffff;
     margin-top: 2em;
+    padding-top: 0em; 
     font-size: .8em;
+    position: absolute;
+    right: 2.5em;
+    padding-right: 3em; 
 }
 
 li {
     margin-left: -1em;
+}
+
+@media (max-width: 768px) {
+nav .active {
+    text-decoration: underline;
+    background-color: #acd373;
+    background-image: none;
+    margin: 0em; 
+    position: relative; 
+}
 }
 
 nav .active {
@@ -79,6 +94,7 @@ nav .active {
     background-color: #acd373;
     background-image: none;
 }
+
 
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
     background-color: #acd373;
@@ -90,20 +106,42 @@ nav .active {
 }
 
 #hamburger {
-    max-height: 2em;
+    margin: 0em;
+    padding: 0em;
+    position: absolute;
+    border-image: 0px; 
+    max-height: 2.25em;
+    top: 2em;
+    left: 2em;
+    border-radius: 0px;
 }
 
 @media (max-width: 768px)  {
     #hero {
         height: auto;
     }
+    .navbar-brand {    
+    height: auto;
+    width: auto;
+    max-height: 3.125em;
+    margin-left: 2.5em;
+    position: absolute;
+    top: .4px;
+}
+    .navbar-toggle {
+        border: 0em;
+        z-index: 1;
+    }
+    .navbar-nav {
+        background-color: #89A85C;
+    }
+
 }
 
 #hero {
-    height: 31em;
+    height: 30em;
     background-color:  #9abd67;
     position: relative;
-    height: 100%;
 }
 
 
@@ -161,12 +199,41 @@ nav .active {
     
     #text {
         width: 50%;
+        padding-left: 2em; 
+        position: relative;
+    }
+    
+    #text #human {
+        margin-left: 5%;
+    }
+    
+    #text h1 {
+        font-weight: 600; 
+        margin: 0em; 
     }
     
     #iphone {
         max-height: 5em;
-        im
+        position: absolute; 
+        left: 50%; 
+        top: 2em; 
     }
+    #button-background {
+    background-color: #89A85C;
+    width: 6em;
+    height: auto;
+    position:absolute;
+    right: 0;
+    height: 100%; 
+    border-image-width: 0px;
+    display: inline;
+}
+    
+    #about button {
+        margin-bottom: 3em; 
+        margin-left: 2em; 
+    }
+
 }
 
 
@@ -174,8 +241,9 @@ nav .active {
 #about h1 {
     font-family: "Open Sans", sans-serif;
     text-transform: uppercase;
-    margin-left: 3em;
+    margin-left: .5em;
     font-weight: 400;
+    display: inline-block; 
     
 }
 
@@ -190,14 +258,16 @@ nav .active {
 #text {
     width: 50%;
     margin-top: 3em;
+    margin-left: 10%; 
 }
 
 #human {
     height: auto;
     width: auto;
     max-height: 3em;
-    display: inline;
-    float: left;
+   position: relative; 
+    left: 1%; 
+    
 }
 
 #about button {
@@ -211,15 +281,20 @@ nav .active {
     width: 9.3em;
     background-color: white;
     margin-top: 2em;
+    margin-bottom: 2em; 
+    margin-left: 1em; 
 }
 
 #iphone {
     display: inline-block;
     height: auto;
     width: auto;
-    max-height: 20em;
-    float: right;
-    margin-right: 12em;
-    margin-bottom: 6em;
-    margin-top: 2.5em;
+    max-height: 23em;
+    position:  absolute;
+    left: 35%;
+    top: 50%; 
+   margin-top: 2em; 
+    margin-right: 10%; 
+     
 }
+
